# for display continuity sake please use 2 spaces instead of tabs

2013-11-18 Matthias Scholz <ms@jammerhund.de>
  * added some point in TODO
  * added the option for building a specific java class version in build.xml and
    build.properties

2013-11-16 Matthias Scholz <ms@jammerhund.de>
  * new build.xml, build.properties for build, run and jar the SkyPrinterPlugin
    with ant.
  * documentation in README
  * some additional changes in conjunction with the ant build
  * fix typo in german translation

2013-07-23 Matthias Scholz <ms@jammerhund.de>
  * ShowScaleRenderer integrated
  * scale true printing integrated

2013-07-18 Matthias Scholz <ms@jammerhund.de>
  * PrintPlugIn:
    - pdfCurrentWindow():
	  - restore the last PDF output directory from Blackboard
	  - customizalble dateformat for the PDF file name via i18n
      - add some metadata to the PDF
    - execute():
	  - ComboBox with papersize
	  - orientation switch
    - printCurrentWindow():
      - fix PrintServiceLookup problem for *nix systems with the JobName Attribute
  * NorthArrowRenderer activated