@@ -9,7 +9,7 @@
 openjump.svn=../openjump_svn
 
 # Java classes version we are compile for?
-java.targetversion=1.6
+java.targetversion=1.5
 
 # Main class to run
 run.mainclass=com.vividsolutions.jump.workbench.JUMPWorkbench
