@@ -14,6 +14,6 @@
 - code cleanup
   - cleanup Imports
   - @Overrides...
-- PDF metadata are hardcoded; would be better if the user can set this (see mail from Jukka 17.11.2013)
++ PDF metadata are hardcoded; would be better if the user can set this (see mail from Jukka 17.11.2013)
 - check if expand to fit vertical and scale true makes sense together (see mail from Jukka 17.11.2013)
-- check function of print page border option
++ check function of print page border option
