@@ -19,6 +19,14 @@ PrintPlugIn.Print-area-in-selection-bounds = Print Area in Selection Bounds
 #PrintPlugIn.out-of-range = out of range
 PrintPlugIn.Finished-message = Print finished
 PrintPlugIn.Print-to-PDF = Print to PDF
+PrintPlugIn.PDF-title = PDF title
+PrintPlugIn.PDF-subject = PDF subject
+PrintPlugIn.PDF-author = PDF author
+PrintPlugIn.PDF-keywords = PDF keywords
+PrintPlugIn.PDF-title-tooltip = The title field in the properties of the PDF file.
+PrintPlugIn.PDF-subject-tooltip = The subject field in the properties of the PDF file.
+PrintPlugIn.PDF-author-tooltip = The author field in the properties of the PDF file.
+PrintPlugIn.PDF-keywords-tooltip = The keywords field in properties of the PDF file.
 PrintPlugIn.Save-PDF = Save PDF
 PrintPlugIn.PDF-files = PDF Files
 PrintPlugIn.PDF-page-width = PDF Page Width
