@@ -19,6 +19,14 @@ PrintPlugIn.Print-area-in-selection-bounds = Inhalt der Auswahl drucken
 #PrintPlugIn.out-of-range = out of range
 PrintPlugIn.Finished-message = Ausdruck ist fertig
 PrintPlugIn.Print-to-PDF = Nach PDF drucken
+PrintPlugIn.PDF-title = PDF Titel
+PrintPlugIn.PDF-subject = PDF Betreff
+PrintPlugIn.PDF-author = PDF Author
+PrintPlugIn.PDF-keywords = PDF Schl\u00fcsselw\u00f6rter
+PrintPlugIn.PDF-title-tooltip = Das Titel Feld in den Eigenschaften der PDF Datei.
+PrintPlugIn.PDF-subject-tooltip = Das Betreff Feld in den Eigenschaften der PDF Datei.
+PrintPlugIn.PDF-author-tooltip = Das Author Feld in den Eigenschaften der PDF Datei.
+PrintPlugIn.PDF-keywords-tooltip = Das Schl\u00fcsselw\u00f6rter Feld in den Eigenschaften der PDF Datei.
 PrintPlugIn.Save-PDF = PDF Speichern
 PrintPlugIn.PDF-files = PDF Dateien
 PrintPlugIn.PDF-page-width = PDF Seiten Breite
