@@ -1,33 +1,41 @@
 #jump_es.properties
-PrintPlugIn.Change-line-width=Cambiar el grosor de las l\u00EDneas
+PrintPlugIn.Change-line-width=Cambiar el grosor de las l\u00edneas
 PrintPlugIn.custom-papersize=Formato personalizado
 PrintPlugIn.dateFormatString=dd.MM.yyyy_HH-mm-ss
-PrintPlugIn.Expand-to-fit=Espander a toda la p\u00E1gina (vertical)
-PrintPlugIn.Finished-message=Impresi\u00F3n finalizada
+PrintPlugIn.Expand-to-fit=Espander a toda la p\u00e1gina (vertical)
+PrintPlugIn.Finished-message=Impresi\u00f3n finalizada
 PrintPlugIn.Landscape=Landscape
-PrintPlugIn.Landscape-orientation=Orientaci\u00F3n horizontal
-PrintPlugIn.Line-width-percent=Grosor de l\u00ECnea (%) 
+PrintPlugIn.Landscape-orientation=Orientaci\u00f3n horizontal
+PrintPlugIn.Line-width-percent=Grosor de l\u00ecnea (%) 
 PrintPlugIn.Line-width-tooltip=0 - 300
-PrintPlugIn.Paper-size=Formato de p\u00E1gina
+PrintPlugIn.Paper-size=Formato de p\u00e1gina
 PrintPlugIn.PDF-files=Fichero PDF
-PrintPlugIn.PDF-page-height=PDF altura p\u00E1gina
+PrintPlugIn.PDF-page-height=PDF altura p\u00e1gina
 PrintPlugIn.PDF-page-tooltip=mm
-PrintPlugIn.PDF-page-width=PDF ancho p\u00E1gina
+PrintPlugIn.PDF-page-width=PDF ancho p\u00e1gina
 PrintPlugIn.PDF-Subject=Imprimir mapa
 PrintPlugIn.Please-select-the-papersize=Seleccione el formato
 PrintPlugIn.Portait=Portait
-PrintPlugIn.Portrait-orientation=Orientaci\u00F3n vertical
+PrintPlugIn.Portrait-orientation=Orientaci\u00f3n vertical
 PrintPlugIn.Print=Impresion
 PrintPlugIn.Print-area-in-fence=Imprimir el area en el Marco
-PrintPlugIn.Print-area-in-selection-bounds=Imprimir el area de la selecci\u00F3n
+PrintPlugIn.Print-area-in-selection-bounds=Imprimir el area de la selecci\u00f3n
 PrintPlugIn.Print-border=Imprimir el borde
 PrintPlugIn.Printer-not-found=Impresora no encontrada
-PrintPlugIn.Print-options=Opciones de impresi\u00F3n
+PrintPlugIn.Print-options=Opciones de impresi\u00f3n
 PrintPlugIn.Print-to-PDF=Imprimir en PDF
-PrintPlugIn.Remove-basic-fills=Quitar el color de relleno (estilo b\u00E1sico)
+PrintPlugIn.PDF-title = PDF title
+PrintPlugIn.PDF-subject = PDF subject
+PrintPlugIn.PDF-author = PDF author
+PrintPlugIn.PDF-keywords = PDF keywords
+PrintPlugIn.PDF-title-tooltip = The title field in the properties of the PDF file.
+PrintPlugIn.PDF-subject-tooltip = The subject field in the properties of the PDF file.
+PrintPlugIn.PDF-author-tooltip = The author field in the properties of the PDF file.
+PrintPlugIn.PDF-keywords-tooltip = The keywords field in properties of the PDF file.
+PrintPlugIn.Remove-basic-fills=Quitar el color de relleno (estilo b\u00e1sico)
 PrintPlugIn.Remove-theme-fills=Quitar el color de relleno (coloracion tematica)
 PrintPlugIn.Remove-Transparency=Quitar la transparencia
-PrintPlugIn.Resolution-multiplier=Duplica la resoluci\u00F3n de la imagen
+PrintPlugIn.Resolution-multiplier=Duplica la resoluci\u00f3n de la imagen
 PrintPlugIn.Save-PDF=Guardar como PDF
 PrintPlugIn.scale=Escala
 PrintPlugIn.scale-true-printing=Imprimir a la escala
