@@ -4,7 +4,7 @@ PrintPlugIn.Print = Imprimer
 #PrintPlugIn.Print-as-vector = Force printing as vectors (no transparency)
 PrintPlugIn.Remove-Transparency = Enlever la transparence
 PrintPlugIn.Remove-basic-fills = Enlever la couleur de remplissage (styles de base)
-PrintPlugIn.Remove-theme-fills = Enlever la couleur de remplissage (th\u00E9matiques couleur)
+PrintPlugIn.Remove-theme-fills = Enlever la couleur de remplissage (th\u00e9matiques couleur)
 PrintPlugIn.Change-line-width = Changer la largeur des lignes
 PrintPlugIn.Line-width-percent = Largeur des lignes (%)
 PrintPlugIn.Line-width-tooltip = 0 - 300
@@ -13,24 +13,32 @@ PrintPlugIn.Print-border = Imprimer la bordure
 PrintPlugIn.Print-options = Options d'impression
 PrintPlugIn.Printer-not-found = L'imprimante n'a pas \u00e9t\u00e9 trouv\u00e9e
 PrintPlugIn.Resolution-multiplier = Doubler la r\u00e9solution des images
-PrintPlugIn.Expand-to-fit = \u00C9tendre l'emprise \u00E0 toute la page (verticalement)
-PrintPlugIn.Print-area-in-fence=Imprimer uniquement l'int\u00E9rieur du cadre
-PrintPlugIn.Print-area-in-selection-bounds = Imprimer la zone englobant la s\u00E9lection
+PrintPlugIn.Expand-to-fit = \u00c9tendre l'emprise \u00e0 toute la page (verticalement)
+PrintPlugIn.Print-area-in-fence=Imprimer uniquement l'int\u00e9rieur du cadre
+PrintPlugIn.Print-area-in-selection-bounds = Imprimer la zone englobant la s\u00e9lection
 #PrintPlugIn.out-of-range = en dehors de la zone
 PrintPlugIn.Finished-message = Impression termin\u00e9e
 PrintPlugIn.Print-to-PDF = Imprimer dans un fichier PDF
+PrintPlugIn.PDF-title = PDF title
+PrintPlugIn.PDF-subject = PDF subject
+PrintPlugIn.PDF-author = PDF author
+PrintPlugIn.PDF-keywords = PDF keywords
+PrintPlugIn.PDF-title-tooltip = The title field in the properties of the PDF file.
+PrintPlugIn.PDF-subject-tooltip = The subject field in the properties of the PDF file.
+PrintPlugIn.PDF-author-tooltip = The author field in the properties of the PDF file.
+PrintPlugIn.PDF-keywords-tooltip = The keywords field in properties of the PDF file.
 PrintPlugIn.Save-PDF = Enregistrer le fichier PDF
 PrintPlugIn.PDF-files = Fichiers PDF
 PrintPlugIn.PDF-page-width = Largeur du fichier PDF
 PrintPlugIn.PDF-page-height = Hauteur du fichier PDF
 PrintPlugIn.Paper-size = Format de la page
-PrintPlugIn.Please-select-the-papersize = S\u00E9lectionner le format...
-PrintPlugIn.custom-papersize = Format personnalis\u00E9
+PrintPlugIn.Please-select-the-papersize = S\u00e9lectionner le format...
+PrintPlugIn.custom-papersize = Format personnalis\u00e9
 PrintPlugIn.Portait = Portait
 PrintPlugIn.Landscape = Paysage
 PrintPlugIn.Portrait-orientation = Portrait
 PrintPlugIn.Landscape-orientation = Paysage
 PrintPlugIn.dateFormatString = dd.MM.yyyy_HH-mm-ss
 PrintPlugIn.PDF-Subject = Impression d'une carte
-PrintPlugIn.scale = \u00C9chelle
-PrintPlugIn.scale-true-printing = Imprimer \u00E0 l'\u00E9chelle
+PrintPlugIn.scale = \u00c9chelle
+PrintPlugIn.scale-true-printing = Imprimer \u00e0 l'\u00e9chelle
