@@ -24,6 +24,14 @@ PrintPlugIn.Print-border=Stampa il bordo
 PrintPlugIn.Printer-not-found=Impossibile trovare la stampante
 PrintPlugIn.Print-options=Opzioni Stampa
 PrintPlugIn.Print-to-PDF=Stampa a PDF
+PrintPlugIn.PDF-title = PDF title
+PrintPlugIn.PDF-subject = PDF subject
+PrintPlugIn.PDF-author = PDF author
+PrintPlugIn.PDF-keywords = PDF keywords
+PrintPlugIn.PDF-title-tooltip = The title field in the properties of the PDF file.
+PrintPlugIn.PDF-subject-tooltip = The subject field in the properties of the PDF file.
+PrintPlugIn.PDF-author-tooltip = The author field in the properties of the PDF file.
+PrintPlugIn.PDF-keywords-tooltip = The keywords field in properties of the PDF file.
 PrintPlugIn.Remove-basic-fills=Rimuovere il colore di riempimento (Stile di base)
 PrintPlugIn.Remove-theme-fills=Rimuovere il colore di riempimento (colorazione tematica)
 PrintPlugIn.Remove-Transparency=Rimuovi la trasparenza
