@@ -1,5 +1,13 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-11-22 Matthias Scholz <ms@jammerhund.de>
+  * PrintPlugin:
+    - show the actual map scale in correct sort order in the scale true combobox
+    - in PDF print mode, it makes no sense to print a border, because there is
+      no one! The print border checkbox goes disabled if PDF print is enabled.
+    - now its possible to change the PDF metadata.
+  * build.properties: change java.targetversion to 1.5
+
 2013-11-18 Matthias Scholz <ms@jammerhund.de>
   * added some point in TODO
   * added the option for building a specific java class version in build.xml and
